# boostbiscuit

./: CMakeLists.txt
include/imgui/custom/: custom.hpp
include/imgui/custom/widgets/: checkbox.cpp  child.cpp  color_edit.cpp  combo.cpp  keybind.cpp  navbar.cpp  off_on_button.cpp  selectable.cpp  slider.cpp  text_button.cpp
include/imgui/fonts/: GeistMedium.h  GeistRegular.h
include/minhook/: CMakeLists.txt
src/: boostbiscuit.cpp  boostbiscuit.h  dll.cpp
src/features/module/: bb_module.h  common_data.h  module_manager.cpp  module_manager.h
src/features/module/modules/render/: esp.cpp  esp.h  nametags.cpp  nametags.h
src/features/module/other/: render_data.cpp  render_data.h
src/features/module/register/: class_register.cpp  class_register.h
src/hooks/: hook_manager.cpp  hook_manager.h  java_hook.cpp  java_hook.h
src/hooks/detours/java/: renderName_detour.cpp  renderName_detour.h  renderWorldPass.cpp  renderWorldPass.h  runTick.cpp  runTick.h  updateRenderInfo.cpp  updateRenderInfo.h
src/hooks/detours/native/: wglSwapBuffers.cpp  wglSwapBuffers.h
src/java/: hotspot.cpp  hotspot.h
src/java/classes/: java_class.cpp  java_class.h  java_object.cpp  java_object.h
src/java/jvm/: jvm_manager.cpp  jvm_manager.h
src/java/utils/: conversion.h
src/mapping/: mapping.cpp  mapping.h
src/ui/: gui.cpp  gui.h
src/utils/: render.h  time.h
src/utils/logs/: logger.cpp  logger.h
src/utils/structs/: vec2.h  vec3.h  vec4.h
src/wrapper/: wrapper.h
src/wrapper/java/lang/: ClassLoader.cpp  ClassLoader.h
src/wrapper/java/utils/: List.cpp  List.h
src/wrapper/minecraft/client/: Minecraft.cpp  Minecraft.h
src/wrapper/minecraft/client/entity/: AbstractClientPlayer.cpp  AbstractClientPlayer.h  EntityPlayerSP.cpp  EntityPlayerSP.h
src/wrapper/minecraft/client/gui/: GuiScreen.cpp  GuiScreen.h
src/wrapper/minecraft/client/multiplayer/: WorldClient.cpp  WorldClient.h
src/wrapper/minecraft/client/renderer/: ActiveRenderInfo.cpp  ActiveRenderInfo.h  RenderGlobal.cpp  RenderGlobal.h
src/wrapper/minecraft/client/renderer/entity/: RenderManager.cpp  RenderManager.h
src/wrapper/minecraft/entity/: Entity.cpp  Entity.h  EntityLivingBase.cpp  EntityLivingBase.h
src/wrapper/minecraft/entity/player/: EntityPlayer.cpp  EntityPlayer.h
src/wrapper/minecraft/util/: AxisAlignedBB.cpp  AxisAlignedBB.h  Timer.cpp  Timer.h
src/wrapper/minecraft/world/: World.cpp  World.h
